--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node app.js"
+		"start": "node app.js",
+		"dev": "nodemon -r dotenv/config app.js"
 	},
 	"author": "manish",
 	"license": "ISC",
@@ -19,5 +20,8 @@
 		"multer": "^1.4.2",
 		"pug": "^3.0.0",
 		"socket.io": "^2.3.0"
+	},
+	"devDependencies": {
+		"dotenv": "^10.0.0"
 	}
 }
